# universal-pvp

./: .env.devnet  .env.magicblock.example  Anchor.toml  Cargo.toml  MAGICBLOCK_DEPLOYMENT_COMPLETE.md  MAGICBLOCK_INTEGRATION_COMPLETE.md  README.production.md  deploy-vercel-manual.md  jest.config.js  migration-report.md  package.json  tailwind.config.js  tsconfig.json  vercel.json
.claude-flow/metrics/: system-metrics.json
.github/workflows/: ci.yml  deploy-magicblock.yml  deploy-vercel.yml  deploy.yml  release.yml
apps/web/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
config/: magicblock.config.ts
config/ephemeral-rollups/: er-devnet.config.json
config/grafana/: dashboard-strategic-duel.json
config/monitoring/: alert_rules.yml  docker-compose.monitoring.yml  prometheus.yml
docs/: AGENT_EXECUTION_PLAN.md  BOLT_ECS_ARCHITECTURE.md  BOLT_IMPLEMENTATION_SUMMARY.md  CODEBASE_CLEANUP_RECOMMENDATIONS.md  EXECUTIVE_SUMMARY.md  MAGICBLOCK_INTEGRATION.md  ROADMAP_EXECUTION_PLAN.md  SECURITY_FIXES_SUMMARY.md  SECURITY_VALIDATION_REPORT.md  TECHNICAL_RISK_ASSESSMENT.md  agent-capabilities-matrix.md  business-impact-analysis.md  component-optimization-guide.md  ephemeral-rollups-strategy.md  gambling-ui-guide.md  magicblock-integration-analysis.md  magicblock-integration.md  react-performance-optimization-roadmap.md  retro-gaming-implementation-guide.md  solana-requirements-analysis.md  state-management-refactoring-plan.md  technical-implementation-guide.md  websocket-optimization-strategy.md
docs/api/: README.md  authentication.md  error-codes.md  game-integration-tutorial.md  openapi.yaml  quick-start.md  solana-program.md  typescript-sdk.d.ts  websocket-events.md
docs/security/: SECURITY_FIXES.md  comprehensive_security_audit_report.md  security_checklist.md  security_remediation_guide.md
examples/: pvp-battle-demo.ts.backup  quickstart.md
magicblock-pvp/: .gitignore  README-COST-TRACKING.md  README.md  WALLET_CONNECTION_FIX.md  WALLET_CONNECTION_GUIDE.md  WALLET_STATE_FIX.md  jest.config.js  package-lock.json  package.json  playwright.config.ts  start.sh  turbo.json
magicblock-pvp/apps/contracts/bolt/: Cargo.toml  lib.rs
magicblock-pvp/apps/contracts/bolt/components/: combat_component.rs  position_component.rs
magicblock-pvp/apps/contracts/bolt/src/: lib.rs
magicblock-pvp/apps/contracts/bolt/src/components/: combat.rs  mod.rs  player.rs
magicblock-pvp/apps/contracts/bolt/src/systems/: mod.rs  player_system.rs  session_system.rs
magicblock-pvp/apps/contracts/bolt/systems/: battle_flow.ts  movement_system.rs  optimistic_system.rs  session_system.rs
magicblock-pvp/apps/contracts/programs/pvp-gambling/: Cargo.toml
magicblock-pvp/apps/contracts/programs/pvp-gambling/src/: error.rs  lib.rs  state.rs  utils.rs  vrf.rs
magicblock-pvp/apps/contracts/programs/pvp-gambling/src/instructions/: abort_game.rs  deposit_cap.rs  initialize_game.rs  mod.rs  settle_game.rs
magicblock-pvp/apps/contracts/programs/token-program/: Cargo.toml  lib.rs  state.rs
magicblock-pvp/apps/contracts/programs/token-program-dual/: Cargo.toml
magicblock-pvp/apps/contracts/programs/token-program-dual/src/: lib.rs
magicblock-pvp/apps/contracts/programs/token-program/instructions/: claim_rewards.rs  initialize_token.rs  mod.rs  stake_tokens.rs
magicblock-pvp/docs/: BUILD_FIXES_DOCUMENTATION.md
magicblock-pvp/scripts/: benchmark-latency.ts  measure-costs.ts
scripts/: deploy_magicblock.sh  setup-production.sh
scripts/benchmarks/: run-benchmarks.sh
scripts/monitoring/: cost-monitor.ts
src/app/: _app.tsx  globals.css  layout.tsx  page.tsx
src/architecture/: adr-001-anchor-framework.md  adr-002-microservices-architecture.md  adr-003-devnet-magicblock-integration.md  game-state-machine.md  infrastructure-design.md  smart-contract-architecture.md  system-architecture.md
src/backend/: .env.example  server.js
src/contexts/: MagicBlockProvider.tsx  WalletProvider.tsx
src/frontend/: .env.example  .eslintrc.json  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
src/programs/ecs-program/: Cargo.toml
src/programs/ecs-program/src/: lib.rs
src/programs/ecs-program/src/components/: add_component.rs  mod.rs  update_component.rs
src/programs/ecs-program/src/entities/: mod.rs
src/programs/ecs-program/src/systems/: mod.rs  movement_system.rs
src/programs/game-program/: Cargo.toml
src/programs/game-program/.claude-flow/metrics/: performance.json  task-metrics.json
src/programs/game-program/src/instructions/: admin_functions.rs  emergency_stop_match.rs  execute_action.rs  finish_match.rs  initialize_game.rs  join_match.rs  register_player.rs  start_match.rs  update_player_stats.rs
tests/: README.md  coverage.config.js  cypress.config.js  jest.config.js  setup.js
(+444 files in other folders)
