[workspace]
members = [
    "src/programs/game-program",
    "src/programs/token-program", 
    "src/programs/nft-program",
    "src/programs/shared",
    "src/programs/strategic-duel"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.0"
spl-token = "4.0"
spl-associated-token-account = "2.2"
mpl-token-metadata = "4.1"
# MagicBlock dependencies
bolt-lang = "0.8.0"
magicblock-anchor-integration = "0.1.0"
# Dev dependencies
solana-program-test = "1.18.0"
solana-sdk = "1.18.0" 
tokio = { version = "1.0", features = ["full"] }
assert_matches = "1.5"

[profile.release]
overflow-checks = true