[package]
name = "ecs-program"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
bolt-lang = { git = "https://github.com/magicblock-labs/bolt", tag = "v0.1.5" }
bytemuck = { version = "1.0", features = ["derive"] }
arrayref = "0.3"
solana-program = "1.18"

[dependencies.shared]
path = "../shared"

[lib]
crate-type = ["cdylib", "lib"]
name = "ecs_program"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []