[package]
name = "solduel-bolt"
version = "0.1.0"
edition = "2021"
description = "SolDuel PvP Game using MagicBlock BOLT ECS"

[lib]
crate-type = ["cdylib", "lib"]
name = "solduel_bolt"

[[bin]]
name = "solduel-bolt"
path = "src/bin/main.rs"

[dependencies]
bolt-lang = "0.5.0"
solana-program = "1.16"
anchor-lang = "0.28.0"
bytemuck = "1.13"
serde = { version = "1.0", features = ["derive"] }
borsh = "0.10"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]

[dev-dependencies]
solana-program-test = "1.16"
tokio = "1.0"